# secure-change-point-detection

./: .dockerignore  .gitignore  ARTIFACT-APPENDIX.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  benchmark-realworld.sh  benchmark-synthetic.sh  benchmark.sh
data/: meditation.csv  patient5-S2toS3.csv  traffic_network.csv
openfhe-development-1.1.2/src/pke/lib/encoding/: ckkspackedencoding.cpp
src/: benchmark.py  clustering-sub.cpp  clustering.cpp  cpd.cpp  cpd_multictxt.cpp  diff-privacy.cpp  diff-privacy.h  launcher.sh  local-dp.py  serial.h  utils-basics.h  utils-eval.cpp  utils-eval.h  utils-matrices.cpp
src/data-utils/: bank-loader.py  loan-loader.py  plotter.py  point-generator.py  taxi-loader.py  ts-gen-distr-change.py  ts-gen-freq-change.py
src/data_utils/: plotter.py  ts_gen_distr_change.py  ts_gen_freq_change.py
